Initial Commit for Cybersyn changes

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -1,16 +1,18 @@
 [entity-name]
-ltn-provider-reader=LTN Provider content reader
-ltn-requester-reader=LTN Requester content reader
-ltn-delivery-reader=LTN Delivery content reader
+cybersyn-provider-reader=Cybersyn Provider content reader
+cybersyn-requester-reader=Cybersyn Requester content reader
+cybersyn-delivery-reader=Cybersyn Delivery content reader
 
 [item-name]
-ltn-provider-reader=__ENTITY__ltn-provider-reader
-ltn-requester-reader=__ENTITY__ltn-requester-reader
-ltn-delivery-reader=__ENTITY__ltn-delivery-reader
+cybersyn-provider-reader=__ENTITY__cybersyn-provider-reader__
+cybersyn-requester-reader=__ENTITY__cybersyn-requester-reader__
+cybersyn-delivery-reader=__ENTITY__cybersyn-delivery-reader__
 
 
 [mod-setting-name]
-ltn_content_reader_update_interval=Update Interval (ticks)
+cybersyn_content_reader_update_interval=Update Interval (ticks)
+cybersyn_content_reader_same_surface=Restrict to Same Surface
 
 [mod-setting-description]
-ltn_content_reader_update_interval=How often combinator outputs are updated.\nDefault = 120
+cybersyn_content_reader_update_interval=How often combinator outputs are updated.\nDefault = 120
+cybersyn_content_reader_same_surface=If true, restricts combinators to only output content of the surface they're on
